test/should-fail/jfxc3468b/pak1/A.fx
/**
 * @subtest
 */
package jfxc3468b.pak1;

import jfxc3468b.pak2.B;

public class A extends B.B2 {}

public class A2 extends B {}
